# synergy

./: .gitmodules  CMakeLists.txt  README.md  config.yaml  sonar-project.properties
.github/actions/dist-upload/: action.yml
.github/actions/get-version/: action.yml
.github/workflows/: ci-comment.yml  ci-linux.json  ci.yml  create-tag.yml  test-dist-upload.yml  test-get-version.yml  valgrind-analysis.yml
cmake/: Build.cmake  Definitions.cmake  Libraries.cmake  Packaging.cmake  Version.cmake
scripts/: install_deps.py  package.py
scripts/lib/: vcpkg.py
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/deskflow-client/: CMakeLists.txt  deskflow-client.rc  resource.h
src/apps/deskflow-daemon/: CMakeLists.txt  deskflow-daemon.cpp
src/apps/deskflow-legacy/: deskflow-legacy.cpp
src/apps/deskflow-server/: CMakeLists.txt  deskflow-server.cpp  deskflow-server.rc
src/gui/: CMakeLists.txt
src/gui/src/: AboutDialog.cpp  AboutDialog.h  Action.h  ActionDialog.h  AddClientDialog.cpp  AddClientDialog.h  AppDelegate.h  DataDownloader.cpp  DataDownloader.h  DeskflowApplication.cpp  Hotkey.h  HotkeyDialog.h  KeySequence.h  KeySequenceWidget.h  MainWindow.cpp  MainWindow.h  ServerConfig.cpp  ServerConfig.h  ServerConfigDialog.cpp  ServerConfigDialog.h  TrashScreenWidget.h  main.cpp
src/lib/arch/: IArchDaemon.h  IArchSystem.h  vsnprintf.h
src/lib/arch/unix/: ArchFileUnix.cpp  ArchSystemUnix.cpp  ArchSystemUnix.h
src/lib/arch/win32/: ArchDaemonWindows.h  ArchMiscWindows.cpp  ArchMiscWindows.h  ArchSystemWindows.cpp  ArchSystemWindows.h
src/lib/client/: ServerProxy.cpp
src/lib/common/: constants.h  stdistream.h  stdsstream.h
src/lib/deskflow/: App.cpp  App.h  ArgParser.cpp  ArgsBase.h  CMakeLists.txt  ClientApp.cpp  ClientArgs.h  ClientTaskBarReceiver.h  Config.cpp  DisplayInvalidException.h  ServerApp.cpp  ToolApp.cpp  ToolApp.h  ToolArgs.cpp  ToolArgs.h
src/lib/deskflow/languages/: LanguageManager.h
src/lib/deskflow/unix/: AppUtilUnix.cpp  AppUtilUnix.h  DeskflowXkbKeyboard.h
src/lib/deskflow/win32/: AppUtilWindows.cpp  AppUtilWindows.h
src/lib/gui/: Logger.cpp  OSXHelpers.mm  VersionChecker.cpp  VersionChecker.h  dotenv.cpp  env_vars.h  gui_config.h.in  messages.cpp  messages.h  paths.h
src/lib/gui/config/: AppConfig.cpp  AppConfig.h  ElevateMode.h  IAppConfig.h  IServerConfig.h
src/lib/gui/core/: CommandProcess.h  CoreProcess.cpp  WaylandWarnings.cpp  WaylandWarnings.h
src/lib/gui/dialogs/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialogBase.ui
src/lib/gui/ipc/: QDataStreamProxy.h
src/lib/gui/tls/: TlsCertificate.cpp  TlsFingerprint.cpp  TlsUtility.cpp
src/lib/gui/validators/: LineEditValidator.cpp
src/lib/net/: SecureListenSocket.cpp  SecureSocket.cpp
src/lib/net/InverseSockets/: SecureServerSocket.cpp  SslApi.cpp
src/lib/platform/: IMSWindowsClipboardFacade.h  MSWindowsEventQueueBuffer.cpp  MSWindowsPowerManager.h  MSWindowsProcess.cpp  MSWindowsSession.cpp  MSWindowsSession.h  MSWindowsWatchdog.cpp  OSXPowerManager.h  XWindowsEventQueueBuffer.cpp  XWindowsPowerManager.h
src/lib/server/: ClientProxy1_8.h  Server.cpp
src/lib/utils/: string_utils.h
src/test/shared/gui/mocks/: AppConfigMock.h  ServerConfigMock.h
src/test/unittests/deskflow/: ArgParserTests.cpp
src/test/unittests/gui/: LoggerTests.cpp
src/test/unittests/gui/core/: WaylandWarningsTests.cpp
src/test/unittests/gui/dialogs/: SettingsDialogTests.cpp
